# CellReadSim

./: README.md  gen.R
input/test_dataset/: transcript_expression.csv
simseq_sc/: CMakeLists.txt  readcount.txt  readme.txt
simseq_sc/ref/: test.fa
simseq_sc/src/: simseq_sc.cpp
